# zed-minimal

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.config/: hakari.toml
.github/workflows/: build-commit.yml  eval.yml  test.yml
.zed/: settings.json
assets/keymaps/: default-linux.json  default-macos.json  vim.json
assets/settings/: default.json
crates/activity_indicator/: Cargo.toml
crates/buffer_diff/: Cargo.toml
crates/buffer_diff/src/: buffer_diff.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: diagnostics.rs
crates/editor/: Cargo.toml
crates/editor/src/: actions.rs  code_context_menus.rs  display_map.rs  editor.rs  editor_settings.rs  editor_tests.rs  element.rs  highlight_matching_bracket.rs  hover_links.rs  hover_popover.rs  inlay_hint_cache.rs  items.rs  jsx_tag_auto_close.rs  lsp_ext.rs  mouse_context_menu.rs  movement.rs  persistence.rs  proposed_changes_editor.rs  rust_analyzer_ext.rs  selections_collection.rs  signature_help.rs  test.rs
crates/editor/src/display_map/: block_map.rs  crease_map.rs  fold_map.rs  inlay_map.rs  tab_map.rs  wrap_map.rs
crates/editor/src/git/: blame.rs
crates/editor/src/test/: editor_lsp_test_context.rs  editor_test_context.rs
crates/eval/: Cargo.toml
crates/eval/src/: assertions.rs  eval.rs  example.rs  explorer.rs  instance.rs  tool_metrics.rs
crates/eval/src/examples/: add_arg_to_trait_method.rs  code_block_citations.rs  comment_translation.rs  file_search.rs  mod.rs  overwrite_file.rs  planets.rs
crates/eval/src/examples/threads/: overwrite-file.json
crates/extension_host/: Cargo.toml
crates/extension_host/benches/: extension_compilation_benchmark.rs
crates/extension_host/src/: extension_host.rs  extension_store_test.rs  headless_host.rs  wasm_host.rs
crates/extension_host/src/wasm_host/: wit.rs
crates/extension_host/src/wasm_host/wit/: since_v0_1_0.rs  since_v0_2_0.rs  since_v0_3_0.rs  since_v0_4_0.rs  since_v0_5_0.rs  since_v0_6_0.rs
crates/file_finder/: Cargo.toml
crates/file_finder/src/: file_finder.rs  file_finder_settings.rs  file_finder_tests.rs  open_path_prompt.rs  open_path_prompt_tests.rs
crates/fs/: Cargo.toml
crates/fs/src/: fs.rs
crates/go_to_line/: Cargo.toml
crates/go_to_line/src/: cursor_position.rs  go_to_line.rs
crates/gpui/: Cargo.toml  README.md  build.rs
crates/gpui/src/: action.rs  app.rs  arena.rs  bounds_tree.rs  color.rs  element.rs  executor.rs  geometry.rs  gpui.rs  interactive.rs  key_dispatch.rs  keymap.rs  platform.rs  scene.rs  style.rs  styled.rs  text_system.rs  util.rs  view.rs  window.rs
crates/gpui/src/app/: entity_map.rs
crates/gpui/src/elements/: anchored.rs  animation.rs  canvas.rs  deferred.rs  div.rs  image_cache.rs  img.rs  list.rs  surface.rs  svg.rs  text.rs  uniform_list.rs
crates/gpui/src/keymap/: context.rs
crates/gpui/src/platform/: keystroke.rs  mac.rs
crates/gpui/src/platform/linux/: text_system.rs
crates/gpui/src/platform/linux/wayland/: client.rs
crates/gpui/src/platform/mac/: attributed_string.rs  metal_renderer.rs  platform.rs  text_system.rs  window.rs
crates/gpui/src/platform/test/: platform.rs  window.rs
crates/gpui/src/text_system/: line_wrapper.rs
crates/language/: Cargo.toml
crates/language/src/: buffer.rs  diagnostic_set.rs  highlight_map.rs  language.rs  language_registry.rs  language_settings.rs  outline.rs  proto.rs  syntax_map.rs  text_diff.rs
crates/language_models/: Cargo.toml
crates/language_models/src/: language_models.rs  provider.rs  settings.rs
crates/language_models/src/provider/: bedrock.rs  cloud.rs  copilot_chat.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: input_handler.rs  lsp.rs
crates/markdown/: Cargo.toml
crates/markdown/examples/: markdown.rs  markdown_as_child.rs
crates/markdown/src/: markdown.rs  parser.rs  path_range.rs
crates/markdown_preview/: Cargo.toml
crates/markdown_preview/src/: markdown_elements.rs  markdown_parser.rs
crates/media/: Cargo.toml  build.rs
crates/media/src/: media.rs
crates/multi_buffer/: Cargo.toml
crates/multi_buffer/src/: multi_buffer.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: notification_store.rs
crates/picker/: Cargo.toml
crates/picker/src/: picker.rs
crates/project/: Cargo.toml
crates/project/src/: buffer_store.rs  color_extractor.rs  connection_manager.rs  direnv.rs  environment.rs  git_store.rs  image_store.rs  lsp_command.rs  lsp_store.rs  prettier_store.rs  project.rs  project_settings.rs  project_tests.rs  search.rs  search_history.rs  task_inventory.rs  task_store.rs  terminals.rs  toolchain_store.rs  worktree_store.rs  yarn.rs
crates/project/src/git_store/: conflict_set.rs  git_traversal.rs
crates/project/src/lsp_command/: signature_help.rs
crates/project/src/lsp_store/: lsp_ext_command.rs
crates/project/src/manifest_tree/: path_trie.rs
crates/project_panel/: Cargo.toml
crates/project_panel/src/: project_panel.rs  project_panel_tests.rs
crates/project_symbols/: Cargo.toml
crates/project_symbols/src/: project_symbols.rs
crates/recent_projects/: Cargo.toml
crates/recent_projects/src/: disconnected_overlay.rs  recent_projects.rs  remote_servers.rs  ssh_config.rs  ssh_connections.rs
crates/rope/: Cargo.toml
crates/rope/src/: chunk.rs  rope.rs
crates/search/: Cargo.toml
crates/search/src/: buffer_search.rs  project_search.rs
crates/snippet_provider/: Cargo.toml
crates/snippet_provider/src/: format.rs  lib.rs  registry.rs
crates/text/: Cargo.toml
crates/text/src/: locator.rs  operation_queue.rs  patch.rs  selection.rs  text.rs
crates/time_format/: Cargo.toml
crates/time_format/src/: time_format.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: application_menu.rs  platforms.rs  title_bar.rs  title_bar_settings.rs
crates/util/: Cargo.toml
crates/util/src/: archive.rs  command.rs  markdown.rs  paths.rs  shell_env.rs  size.rs  time.rs  util.rs
crates/welcome/: Cargo.toml
crates/welcome/src/: base_keymap_setting.rs  welcome.rs
script/: bundle-mac  cleanup  merge-upstream  uninstall.sh
(+361 files in other folders)
