[package]
name = "editor"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/editor.rs"
doctest = false

[dependencies]
aho-corasick.workspace = true
anyhow.workspace = true
client.workspace = true
clock.workspace = true
collections.workspace = true
convert_case.workspace = true
db.workspace = true
buffer_diff.workspace = true
emojis.workspace = true
file_icons.workspace = true
futures.workspace = true
fuzzy.workspace = true
fs.workspace = true
git.workspace = true
gpui.workspace = true
inline_completion.workspace = true
itertools.workspace = true
language.workspace = true
linkify.workspace = true
log.workspace = true
lsp.workspace = true
markdown.workspace = true
multi_buffer.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
project.workspace = true
rand.workspace = true
rpc.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
smallvec.workspace = true
smol.workspace = true
snippet.workspace = true
sum_tree.workspace = true
telemetry.workspace = true
text.workspace = true
theme.workspace = true
unicode-segmentation.workspace = true
unicode-script.workspace = true
ui.workspace = true
url.workspace = true
util.workspace = true
uuid.workspace = true
workspace.workspace = true
zed_actions.workspace = true
