[package]
name = "eval"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
default-run = "eval"

[lints]
workspace = true

[[bin]]
name = "eval"
path = "src/eval.rs"

[[bin]]
name = "explorer"
path = "src/explorer.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
async-watch.workspace = true
buffer_diff.workspace = true
chrono.workspace = true
clap.workspace = true
client.workspace = true
collections.workspace = true
debug_adapter_extension.workspace = true
dirs.workspace = true
dotenv.workspace = true
env_logger.workspace = true
extension.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
gpui_tokio.workspace = true
language.workspace = true
language_extension.workspace = true
languages = { workspace = true, features = ["load-grammars"] }
node_runtime.workspace = true
paths.workspace = true
pretty_assertions.workspace = true
project.workspace = true
release_channel.workspace = true
reqwest_client.workspace = true
serde.workspace = true
settings.workspace = true
shellexpand.workspace = true
telemetry.workspace = true
terminal_view.workspace = true
util.workspace = true
uuid.workspace = true
workspace-hack.workspace = true
