[package]
name = "fs"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/fs.rs"

[dependencies]
anyhow.workspace = true
async-tar.workspace = true
async-trait.workspace = true
collections.workspace = true
futures.workspace = true
git.workspace = true
gpui.workspace = true
libc.workspace = true
parking_lot.workspace = true
paths.workspace = true
rope.workspace = true
proto.workspace = true
serde.workspace = true
smol.workspace = true
tempfile.workspace = true
text.workspace = true
util.workspace = true
fsevent.workspace = true
objc.workspace = true
cocoa = "0.26"
