[package]
name = "media"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/media.rs"
doctest = false

[dependencies]
anyhow.workspace = true
workspace-hack.workspace = true
core-foundation.workspace = true
foreign-types = "0.5"
metal.workspace = true
core-video.workspace = true
objc.workspace = true

[build-dependencies]
bindgen = "0.71"
