[package]
name = "multi_buffer"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/multi_buffer.rs"
doctest = false


[dependencies]
anyhow.workspace = true
clock.workspace = true
collections.workspace = true
buffer_diff.workspace = true
gpui.workspace = true
itertools.workspace = true
language.workspace = true
log.workspace = true
rope.workspace = true
smol.workspace = true
serde.workspace = true
smallvec.workspace = true
sum_tree.workspace = true
text.workspace = true
theme.workspace = true
tree-sitter.workspace = true
util.workspace = true
