[package]
name = "notifications"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/notifications.rs"
doctest = false


[dependencies]
anyhow.workspace = true
client.workspace = true
component.workspace = true
db.workspace = true
gpui.workspace = true
rpc.workspace = true
sum_tree.workspace = true
time.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
workspace-hack.workspace = true
