[package]
name = "project_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/project_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
command_palette_hooks.workspace = true
db.workspace = true
editor.workspace = true
file_icons.workspace = true
indexmap.workspace = true
git.workspace = true
gpui.workspace = true
menu.workspace = true
project.workspace = true
schemars.workspace = true
search.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
settings.workspace = true
smallvec.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
client.workspace = true
worktree.workspace = true
workspace.workspace = true
language.workspace = true
zed_actions.workspace = true
workspace-hack.workspace = true
