[package]
name = "project_symbols"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/project_symbols.rs"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
fuzzy.workspace = true
gpui.workspace = true
ordered-float.workspace = true
picker.workspace = true
project.workspace = true
theme.workspace = true
util.workspace = true
workspace.workspace = true
