[package]
name = "snippet_provider"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
collections.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
parking_lot.workspace = true
paths.workspace = true
serde.workspace = true
schemars.workspace = true
workspace-hack.workspace = true
