[package]
name = "text"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/text.rs"
doctest = false


[dependencies]
anyhow.workspace = true
clock.workspace = true
collections.workspace = true
parking_lot.workspace = true
postage.workspace = true
regex.workspace = true
rope.workspace = true
smallvec.workspace = true
sum_tree.workspace = true
