[package]
name = "time_format"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/time_format.rs"
doctest = false

[dependencies]
time.workspace = true
workspace-hack.workspace = true
core-foundation.workspace = true
core-foundation-sys.workspace = true
