[package]
name = "util"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/util.rs"
doctest = true

[dependencies]
anyhow.workspace = true
async-fs.workspace = true
async_zip.workspace = true
collections.workspace = true
dirs.workspace = true
futures-lite.workspace = true
futures.workspace = true
globset.workspace = true
itertools.workspace = true
log.workspace = true
regex.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
smol.workspace = true
take-until.workspace = true
tempfile.workspace = true
unicase.workspace = true
workspace-hack.workspace = true
libc.workspace = true
